# dotfiles

./: .gitignore  .gitmodules  linkup.sh  setup.py
.xmonad/: xmonad.hs
bat/: config
ghc/: ghci.conf
git/: .gitconfig  gitconfig
haskeline/: .haskeline
intellij/: .ideavimrc  .stow-local-ignore  ideavimrc
kitty/: kitty.conf
nixos/: configuration.nix  nix.nix  packages.nix
nixos/nix/: default.nix  sources.json
plasma-workspace/env/: set_window_manager.sh
spacemacs/: .spacemacs  spacemacs
termite/: config
vscode/Code/User/: settings.json
xmonad/: MyLayout.hs  MyTheme.hs  default.nix  xmonad-config.nix  xmonad-contrib.nix  xmonad-extras.nix  xmonad.cabal  xmonad.hs  xmonad.nix
xmonad/.xmonad/: xmonad.hs
zsh/: .stow-local-ignore  .zpreztorc  .zshrc  zpreztorc  zshenv  zshrc
