name:                xmonad
version:             0.1.0.0
license:             PublicDomain
author:              Oleh Stolyar
maintainer:          stolyar.oleh@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable xmonad
  main-is:             xmonad.hs

  hs-source-dirs:      .

  other-modules:       MyLayout
                     , MyTheme

  other-extensions:    FlexibleInstances
                     , MultiParamTypeClasses
                     , PartialTypeSignatures

  build-depends:       base >=4.10 && <4.12
                     , containers
                     , xmonad
                     , xmonad-contrib
                     , xmonad-extras
                     , X11

  default-language:    Haskell2010

